# Research_Meta_Material

./: .gitignore  README.md  pyproject.toml  requirements.txt
Application/scripts/: run_validation.py
Application/src/: __init__.py
Application/src/core/: __init__.py  impulse_response.py  meta_dissipation.py
Application/src/models/: __init__.py  consistent_unit_cell.py  dispersion.py  parameters.py
Application/src/utils/: __init__.py  helpers.py  visualization.py
Application/test/: __init__.py  test_example.py
docs/: META_DISSIPATION_ANALYSIS.md  Meta-dissipation_ A Comprehensive Theoretical and Computational Framework for Quantifying Energy Dissipation in Discrete Periodic Metamaterials.md
